--- a/style.css
+++ b/style.css
@@ -47,3 +47,82 @@ h1{
     border-bottom: none;
 }
 
+/*Símbolos*/
+
+.x{
+    font-size: 65px;
+    color: red;
+    display: inline-block;
+    line-height: 100px;
+}
+
+.o {
+    width: 50px;
+    height: 50px;
+    border: solid 5px green;
+    border-radius: 50%;
+    display: inline-block;
+    margin-top: 17px;
+
+}
+
+/* Class escondida */
+
+/*.hide {
+    display: none!important;
+}*/
+
+/* placar */
+
+#placar-container{
+    font-weight: bold;
+    margin-top: 30px;
+    font-size: 25px;
+    position: relative;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.placar_box{
+    display: inline-block;
+    margin: o 20px;
+}
+
+.x-placar{
+    color: red;
+    margin-right: 3px;
+}
+
+.o-placar{
+    display: inline-block;
+    width: 18px;
+    height: 18px;
+    border: solid 2px green;
+    border-radius: 50%;
+    margin-right: 3px;
+}
+
+/* Mensagem vitória / velha */
+
+#mensagem p{
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right:0;
+    top: 150px;
+    width: 500px;
+    font-size: 50px;
+    background-color: #000;
+    color: #fff;
+    padding: 20px;
+}
+
+
+
+
+
+
+
+
+
